# bot_coordinator

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: esc-bot-aff9d-20c51ba85efb.json  orderfood-b7bbb-f90f0ee40141.json
launch/: esc_bot.launch  esc_bot_1.launch  esc_bot_2.launch  esc_bot_2_blocked.launch
maps/: cafe.yaml  raw_cafe.pgm  raw_cafe.yaml  restaurant1.json  restaurant1.pgm  restaurant1.yaml  restaurant2.json  restaurant2.pgm  restaurant2.yaml
scripts/: push_request.py  push_sample.py  test_robot.sh
src/: converter.py  push_sample.py  robot_coordinator.py  simple_action_goal.py  test_robot_coordinator.py  test_robust_robot.py  test_system_robot.py  test_unit_robot.py
worlds/: cafe.world  home.world  restaurant1.world  restaurant2.world  restaurant2_blocked.world
